--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-node_modules
+# dependencies
+/node_modules
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.vs/
+
+npm-debug.log*
