--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Diversity Hackathon Project - Represented.io",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server",
+    "seed": "node server/seed"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "pg": "^7.4.3",
     "sequelize": "^4.38.1"
   }
 }
