--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Diversity Hackathon Project - Represented.io",
   "main": "index.js",
+  "engines": {
+    "node": "8.9.4",
+    "npm": "5.7.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
